--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "email": "lichnow@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Gkr\\Hooks\\": "src"
+        }
+    },
     "require": {
         "php": ">=5.6.4",
         "illuminate/support": "^5.4",
